--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ paho-mqtt = "^1.6.1"
 rich = "^12.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "7.1.1^"
+pytest = "^7.1.1"
 flake8 = "^4.0.1"
 black = {version = "^22.3.0", allow-prereleases = true}
 
