--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,54 @@
-commonmark==0.9.1; python_full_version >= "3.6.3" and python_full_version < "4.0.0" \
-    --hash=sha256:da2f38c92590f83de410ba1a3cbceafbc74fee9def35f9251ba9a971d6d66fd9 \
-    --hash=sha256:452f9dc859be7f06631ddcb328b6919c67984aca654e5fefb3914d54691aed60
-paho-mqtt==1.6.1 \
-    --hash=sha256:2a8291c81623aec00372b5a85558a372c747cbca8e9934dfe218638b8eefc26f
-pygments==2.13.0; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version >= "3.6"
-rich==12.5.1; python_full_version >= "3.6.3" and python_full_version < "4.0.0"
-typing-extensions==4.3.0; python_full_version >= "3.6.3" and python_full_version < "4.0.0" and python_version < "3.9" and python_version >= "3.7"
+attrs==22.2.0
+build==0.10.0
+CacheControl==0.12.11
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cleo==2.0.1
+commonmark==0.9.1
+crashtest==0.4.1
+distlib==0.3.6
+dulwich==0.21.3
+exceptiongroup==1.1.0
+filelock==3.9.0
+html5lib==1.1
+idna==3.4
+importlib-metadata==6.0.0
+iniconfig==2.0.0
+installer==0.6.0
+jaraco.classes==3.2.3
+jsonschema==4.17.3
+keyring==23.13.1
+lockfile==0.12.2
+more-itertools==9.1.0
+msgpack==1.0.5
+packaging==23.0
+paho-mqtt==1.6.1
+pexpect==4.8.0
+pkginfo==1.9.6
+platformdirs==2.6.2
+pluggy==1.0.0
+poetry==1.4.0
+poetry-core==1.5.1
+poetry-plugin-export==1.3.0
+ptyprocess==0.7.0
+pycparser==2.21
+Pygments==2.13.0
+pyproject_hooks==1.0.0
+pyrsistent==0.19.3
+pytest==7.2.2
+rapidfuzz==2.13.7
+requests==2.28.2
+requests-toolbelt==0.10.1
+rich==12.5.1
+shellingham==1.5.0.post1
+six==1.16.0
+tomli==2.0.1
+tomlkit==0.11.6
+trove-classifiers==2023.2.20
+typing_extensions==4.3.0
+urllib3==1.26.14
+virtualenv==20.20.0
+webencodings==0.5.1
+xattr==0.10.1
+zipp==3.15.0
